# stud

./: temp.txt
61/os/: HoarsMonitor.docx
61/os/HoarsMonitor/project/: build_win.bat
61/os/HoarsMonitor/src/: HoarMonitor.cpp
71/database/lab1/: LAB1.sql  LAB1_1.sql
71/database/lab2/: SQLFamily.sql
71/design_po/: tz_komukacos.docx  uml_dfd.vsd  uml_sequence.vsd  uml_state.vsd  uml_static_structure.vsd  uml_use_case.docx  uml_use_case.vsd
almaz/linux1/: План курса.docx
almaz/stat/: Lr1.xmcd  Lr2.xmcd  Lr3.xmcd  Lr4.xmcd  Lr5.xmcd  Lr6.xmcd  Lr7.xmcd  Руководство к лабораторным работам.docx
bmstu/71/database/lab1/: LAB1.sql  LAB1_1.sql
bmstu/71/database/lab2/: SQLQuery1.sql
bmstu/71/design_po/: tz_komukacos.docx  uml_dfd.docx  uml_sequence.vsd  uml_use_case.vsd
bmstu/71/network/lab3/client/project/: CMakeLists.txt
bmstu/71/network/lab5/client/project/: CMakeLists.txt  build_win.bat
coursera/cppYandex/brown/clang_tidy/: alarm.cpp  overflow.cpp  planets.cpp  readme
coursera/cppYandex/brown/week3/: concurrent_map_2.cpp  print_stats_2.cpp  synchronized_2.cpp
coursera/cppYandex/red/finaly_origin/: search_server_t.cpp.cpp  search_server_t.h.cpp
coursera/cppYandex/red/search_server/: main.cpp  readme  search_server.cpp  search_server.h
coursera/cppYandex/red/search_server2/: main.cpp  readme  search_server.cpp  search_server.h  test_runner.h
coursera/cppYandex/red/week1/: airline_ticket.h  airport_counter.cpp  log.cpp  matrix_sum.cpp  max_element_if.cpp  my_deque.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  test_runner.h  uniq_id.cpp  update_field.cpp
coursera/cppYandex/red/week2/: booking.cpp  booking2.cpp  learner.cpp  slow.cpp  slow2.cpp  sort_students.cpp
coursera/cppYandex/red/week3/: linked_list.cpp  object_pool.cpp  simple_vector.cpp  simple_vector.h  (+1 more)
coursera/pythonHse/eighth/: .project  10.py  12.py  13.py  14.py  15.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
coursera/pythonHse/fifth/: .project  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  3.py  30.py  4.py  5.py  6.py  7.py  8.py  9.py
coursera/pythonHse/first/: 11.py  12.py  13.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  8.py  9.py  first.py
coursera/pythonHse/fourth/: .project  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
coursera/pythonHse/second/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  3.py  30.py  31.py  32.py  33.py  34.py  35.py  36.py  37.py  38.py  39.py  4.py  40.py  41.py  42.py  43.py  44.py  5.py  (+4 more)
coursera/pythonHse/seventh/: .project  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
coursera/pythonHse/sixth/: .project  1.py  10.py  11.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  input.txt
coursera/pythonHse/third/: .project  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
habr/asm/: func.c  hello_world.asm  main.c  readme.md  return.asm
patternsCpp/decorator/: CMakeLists.txt  build.sh  decorator.h  main.cpp
patternsCpp/observer/: CMakeLists.txt  build.sh  main.cpp  observer.h
patternsCpp/strategy/: CMakeLists.txt  build.sh  main.cpp  serv_info.h  strategy.h
pyfile/: .project  data_file.json  testjson.py
vniirt/optim/: mnk2.py  mnk3.py  mnk4.py  start.py  start2.py
(+294 files in other folders)
